deployment/manifest-blue-green-flask/green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment-green
  labels:
    app: flask-app
    version: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
      version: green
  template:
    metadata:
      labels:
        app: flask-app
        version: green
    spec:
      containers:
        - name: flask-app-container
          image: dockerelvis/python-memcached:${GREEN_VERSION}
          ports:
            - containerPort: 8095
          readinessProbe:
            httpGet:
              path: /health
              port: 8095
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8095
            initialDelaySeconds: 15
            periodSeconds: 20
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  selector:
    app: flask-app
    version: green  # Initially routes to Green
  ports:
    - protocol: TCP
      port: 8095
      targetPort: 8095
  type: LoadBalancer
